Fix: Button alignment issues in Bulma, Foundation and Fomantic

--- a/css/buttons.bulma.scss
+++ b/css/buttons.bulma.scss
@@ -104,6 +104,7 @@ div.dt-button-background {
 
 div.dt-buttons.field.is-grouped {
 	display: block;
+	margin-bottom: 0;
 
 	button.button.processing,
 	div.button.processing,
