--- a/css/buttons.foundation.scss
+++ b/css/buttons.foundation.scss
@@ -3,6 +3,8 @@
 @use 'common.scss';
 
 div.dt-buttons.button-group {
+	margin-bottom: 0;
+
 	div.dt-button-split {
 		margin-bottom: 0;
 
