--- a/css/buttons.semanticui.scss
+++ b/css/buttons.semanticui.scss
@@ -149,6 +149,7 @@ div.dt-buttons {
 
 	&.ui.buttons {
 		flex-wrap: wrap;
+		font-size: 1em;
 	}
 
 	.button {
